--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,22 @@
     list-style: none;
     padding: 0;
 }
+::-webkit-scrollbar-track{
+	box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+	border-radius: 10px;
+}
+
+::-webkit-scrollbar{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-image: linear-gradient( rgb(193, 243, 255),rgb(68, 68, 68))
+}
 a, .speciality_element, button:hover{
     cursor: url(../imgs/main_imgs/hover.png), auto;
 }
